--- a/styles/home.scss
+++ b/styles/home.scss
@@ -26,7 +26,6 @@ a
     margin-bottom: 20px;
     white-space: nowrap;
 
-    font-family: 'Source Sans Pro', sans-serif;
     font-weight: bold;
     font-size: $fs-400;
     text-decoration: none;
@@ -46,6 +45,34 @@ a
         box-shadow: $inner-shadow;
         transform: translateY(2px);
         text-decoration: underline;
+    }
+}
+
+.skills-wrapper
+{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.skills-container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 50px);
+    column-gap: 5vw;
+    text-align: center;
+    justify-content: center;
+    align-items: baseline;
+
+    margin-left: 10vw;
+    margin-right: 10vw;
+}
+
+.skill
+{
+    .img-icon
+    {
+        min-width: 50px;
+        height: auto;
     }
 }
 
@@ -94,7 +121,7 @@ a
 {
     display: flex;
     align-items: center;
-    margin-top: 20vh;
+    margin-top: 15vh;
     margin-left: 15vw;
     margin-right: 15vw;
 }
