--- a/styles/article.scss
+++ b/styles/article.scss
@@ -137,6 +137,19 @@ img
     }
 }
 
+.filwordnet
+{
+    .parallax-group
+    {
+        min-height: 80vh;
+    }
+    
+    img
+    {
+        max-width: 50vw;
+    }
+}
+
 .parallax-wrapper
 {
     display: block;
