--- a/styles/home.css
+++ b/styles/home.css
@@ -50,6 +50,116 @@ br.xl {
   min-height: 35vh;
 }
 
+footer {
+  margin-top: 15vh;
+  margin-bottom: 10vh;
+  max-width: 85vw;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer img {
+  border-radius: 0px;
+}
+
+.link {
+  border-bottom: 2px solid #e7068a;
+  padding-bottom: 0px;
+  font-size: clamp(1.2rem, 1vw, 1.5rem);
+  text-decoration: none;
+  color: #e7068a;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.link:hover {
+  border-bottom: 2px solid #e7068a;
+  padding-bottom: 3px;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.bluemode .link {
+  color: #EBECF0;
+  border-bottom: 2px solid #EBECF0;
+}
+
+.bluemode .link:hover {
+  border-bottom: 2px solid #EBECF0;
+}
+
+.button {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 15px 25px 15px 25px;
+  border: none;
+  border-radius: 50px;
+  background: #EBECF0;
+  -webkit-box-shadow: -3px -3px 5px #FFFFFF, 5px 5px 10px #A8B1D6;
+          box-shadow: -3px -3px 5px #FFFFFF, 5px 5px 10px #A8B1D6;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  white-space: nowrap;
+  font-weight: bold;
+  font-size: clamp(1.2rem, 1vw, 1.5rem);
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  -webkit-transition: 1s;
+  transition: 1s;
+  color: #e7068a;
+}
+
+.button:hover {
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.button:active {
+  -webkit-box-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
+          box-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+  text-decoration: underline;
+}
+
+.navigation {
+  margin-top: 5h;
+  line-height: 75px;
+}
+
+.square-button {
+  border-radius: 10px;
+  max-height: 20px;
+  max-width: 20px;
+}
+
+.img-icon {
+  height: 16px;
+  width: 16px;
+}
+
+.unselectable {
+  -moz-user-select: -moz-none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
+      user-select: none;
+  -webkit-user-drag: none;
+}
+
 .slide-up {
   -webkit-transform: translateY(30%);
           transform: translateY(30%);
@@ -114,44 +224,6 @@ br.xl {
   min-height: 20px;
 }
 
-a {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 15px 25px 15px 25px;
-  border: none;
-  border-radius: 50px;
-  background: #EBECF0;
-  -webkit-box-shadow: -3px -3px 5px #FFFFFF, 5px 5px 10px #A8B1D6;
-          box-shadow: -3px -3px 5px #FFFFFF, 5px 5px 10px #A8B1D6;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  white-space: nowrap;
-  font-weight: bold;
-  font-size: clamp(1.2rem, 1vw, 1.5rem);
-  text-decoration: none;
-  cursor: pointer;
-  outline: none;
-  -webkit-transition: 1s;
-  transition: 1s;
-  color: #e7068a;
-}
-
-a:hover {
-  -webkit-transition: 0.25s;
-  transition: 0.25s;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-a:active {
-  -webkit-box-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
-          box-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
-  -webkit-transform: translateY(2px);
-          transform: translateY(2px);
-  text-decoration: underline;
-}
-
 .skills-wrapper {
   margin-left: auto;
   margin-right: auto;
@@ -160,10 +232,10 @@ a:active {
 .skills-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (50px)[auto-fit];
-      grid-template-columns: repeat(auto-fit, 50px);
-  -webkit-column-gap: 5vw;
-          column-gap: 5vw;
+  -ms-grid-columns: (45px)[auto-fit];
+      grid-template-columns: repeat(auto-fit, 45px);
+  -webkit-column-gap: 4vw;
+          column-gap: 4vw;
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -176,7 +248,7 @@ a:active {
 }
 
 .skill .img-icon {
-  min-width: 50px;
+  min-width: 45px;
   height: auto;
 }
 
@@ -192,22 +264,6 @@ a:active {
   bottom: 0;
   left: 0;
   z-index: 99;
-}
-
-.square-button {
-  border-radius: 10px;
-  max-height: 20px;
-  max-width: 20px;
-}
-
-.img-icon {
-  height: 16px;
-  width: 16px;
-}
-
-.navigation {
-  margin-top: 5h;
-  line-height: 75px;
 }
 
 .section {
@@ -310,23 +366,6 @@ a:active {
   right: -15vw;
 }
 
-.contact-container {
-  margin-top: 15vh;
-  margin-bottom: 10vh;
-  max-width: 85vw;
-  margin-left: auto;
-  margin-right: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .chip {
   display: inline-block;
   width: -webkit-fit-content;
@@ -356,15 +395,6 @@ a:active {
 .selected:hover {
   -webkit-box-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
           box-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
-}
-
-.unselectable {
-  -moz-user-select: -moz-none;
-  -webkit-user-select: none;
-  -o-user-select: none;
-  -ms-user-select: none;
-      user-select: none;
-  -webkit-user-drag: none;
 }
 
 @media (max-width: 479) {
